# django_coursework

./: .env.example  mailing_attempt_fixture.json  mailing_fixture.json  message_fixture.json  pyproject.toml  recipient_fixture.json  requirements.txt
client_emails/: apps.py
config/: settings.py  urls.py
mailing/: urls.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_options_alter_mailing_finish_send_at_and_more.py  0003_rename_mailing_response_mailingattempt_mail_server_response_and_more.py  0004_alter_mailing_finish_send_at_and_more.py  0005_alter_mailing_finish_send_at_and_more.py  0006_alter_mailing_finish_send_at_and_more.py
mailing/templates/mailing/: base.html
users/: admin.py  models.py  urls.py  views.py
users/management/command/: csu.py
users/migrations/: 0001_initial.py
users/templates/registration/: logged_out.html  register.html
