[tool.poetry]
name = "django-coursework"
version = "0.1.0"
description = ""
authors = ["Ekaterina Pavlova <miss.kat.katerina2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
dotenv = "^0.9.9"
views = "^0.3"
automium-web = "^0.1.1"
django-mailing = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
